-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.9.2, 5.10.0 Alpha
-
None
-
Windows 10
It seems qtquickcontrols::Tests_TreeView is now crashing in windows 10:
PASS : qtquickcontrols::Tests_TreeView::initTestCase()
jom: C:\Users\qt\work\qt\qtquickcontrols\tests\auto\controls\Makefile.Release [check] Error 2
jom: C:\Users\qt\work\qt\qtquickcontrols\tests\auto\controls\Makefile [release-check] Error 2
agent:2017/08/20 13:12:28 build.go:202: Process finished with error: exit status 2
agent:2017/08/20 13:12:28 build.go:154: Error reading from stdout/err: exit status 2
agent:2017/08/20 13:12:28 agent.go:62: ERROR building: error unmarshalling testlib xml output: 'XML syntax error on line 1862: unexpected EOF'. Most likely the test has crashed
Details:https://testresults.qt.io/coin/integration/qt/qt5/tasks/1503234123
- relates to
-
QTBUG-53084 qtquickcontrols - tst_controls - TreeView auto tests are flaky
-
- Closed
-
-
QTBUG-49360 QtQuickControls\tests\auto\extras\Treeview menu tests fail on Windows 10
-
- Closed
-
| For Gerrit Dashboard: QTBUG-62630 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 203254,2 | Fix memory corruption with type trimming | 5.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |