src/qml/qml/qqmltypeloader.cpp
@@ -2295,7 +2295,7 @@ void QQmlTypeData::done()
             }
         }
 
-        m_compiledData->finalize(enginePrivate);
+        m_compiledData->finalizeCompositeType(enginePrivate);
     }
 
     {
